<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.incquerylabs.examples.cps</groupId>
	<artifactId>com.incquerylabs.examples.cps.benchmark.parent</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<name>CPS Demonstrator Benchmark</name>
	<url>https://github.com/viatra/viatra-cps-benchmark</url>
	<packaging>pom</packaging>
	<modules>
		<!-- target platform -->
		<module>releng/com.incquerylabs.examples.cps.target</module>
		
		<module>dependencies/eu.mondo.sam.bundle</module>
		<module>tests/com.incquerylabs.examples.cps.performance.tests</module>
		
		<module>releng/com.incquerylabs.examples.cps.rcpapplication.headless.product</module>
		<module>releng/com.incquerylabs.examples.cps.rcpapplication.headless</module>
	</modules>
	<properties>
		<tycho.version>1.3.0</tycho.version>
		<xtend.compiler.version>2.16.0</xtend.compiler.version>
		<viatra.repository.url>http://download.eclipse.org/viatra/updates/integration</viatra.repository.url>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <benchmark.version>2.0.0-SNAPSHOT</benchmark.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<strictBinIncludes>false</strictBinIncludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
                <artifactId>maven-toolchains-plugin</artifactId>
            </plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>com.incquerylabs.examples.cps</groupId>
							<artifactId>com.incquerylabs.examples.cps.target</artifactId>
							<version>${benchmark.version}</version>
							<relativePath>releng/com.incquerylabs.examples.cps.target/pom.xml</relativePath>
						</artifact>
					</target>
					<environments>
						<!-- 
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						 -->
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<!-- <argLine>-Xmx2048m -XX:MaxPermSize=256m ${tycho.testArgLine} ${cps.test.vmargs}</argLine> -->
					<excludes>
		            	<exclude>**/IntegrationTest*.java</exclude>
						<exclude>**/integration/*.java</exclude>
						<exclude>**/scenarios/*.java</exclude>
						<exclude>**/queries/*.java</exclude>
						<exclude>**/benchmarks/*.java</exclude>
		            </excludes>
		            <failIfNoTests>false</failIfNoTests>
				</configuration>
				<!-- <executions>
		         <execution>
		            <id>unit-test</id>
		            <goals>
		              <goal>test</goal>
		            </goals>
		            <phase>test</phase>
		            <configuration>
		            	<excludes>
		            		<exclude>**/IntegrationTest*.java</exclude>
		            	</excludes>
		            	<includes>
		            		<include>**/*Test.java</include>
		            	</includes>
		            </configuration>
		          </execution>
		        </executions> -->
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
			 <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-toolchains-plugin</artifactId>
                    <version>1.1</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>toolchain</goal>
                            </goals>
                            <configuration>
                             <toolchains>
                                 <jdk>
                                     <id>JavaSE-${java.version}</id>
                                 </jdk>
                             </toolchains>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                 <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <version>${tycho.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <useJDK>BREE</useJDK>
                        <useProjectSettings>true</useProjectSettings>
                        <excludeResources>
                            <excludeResource>**/.gitignore</excludeResource>
                        </excludeResources>
                    </configuration>
                </plugin>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtend.compiler.version}</version>
					<configuration>
						<!-- need to prefix by basedir to generate to currently built module -->
						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
                   <groupId>org.eclipse.tycho</groupId>
                   <artifactId>tycho-versions-plugin</artifactId>
                   <version>${tycho.version}</version>
                   <configuration>
                     <properties>benchmark.version</properties>
                   </configuration>
               </plugin>
			</plugins>
		</pluginManagement>
	</build>
	<repositories>
		<repository>
			<id>viatra.update</id>
			<layout>p2</layout>
			<url>${viatra.repository.url}</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>viatra-snapshots</id>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<url>https://repo.eclipse.org/content/repositories/viatra-snapshots/</url>
		</pluginRepository>
	</pluginRepositories>
</project>
